--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,10 @@
                 <input class="form-control" placeholder="Password" name="password" id="password" type="password" value=""></div>
               <div class="form-group">
                 <input class="form-control" placeholder="Tenant" id="tenant" name="tenant" type="text" value="<%= tenant_name %>"></div>
+              <% if(auth_version == "v3") { %>
+              <div class="form-group">
+                  <input class="form-control" placeholder="Domain" id="domain" name="domain" type="text" value="<%= domain_name %>"></div>
+              <% } %>
               <input class="btn btn-lg btn-primary btn-raised btn-material-blue-600 btn-block" type="button" value="Login"></fieldset>
           </form>
         </div>
